java/istio-demo/deployment/step-1/EmployeeDetails-v1.yaml
##################################################################################################
# discover-skills-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: discover-skills-service
  labels:
    app: discover-skills
    service: discover-skills
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: discover-skills
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discover-skills-v1
  labels:
    app: discover-skills
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discover-skills
      version: v1
  template:
    metadata:
      labels:
        app: discover-skills
        version: v1
    spec:
      serviceAccountName: discover-skills-service-account
      containers:
        - name: discover-skills
          image: sinhasonalkumar/discover-skills-service:20200412-233632.196816f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
##################################################################################################
# capability-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: capability-service
  labels:
    app: capability
    service: capability
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: capability
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capability-v1
  labels:
    app: capability
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capability
      version: v1
  template:
    metadata:
      labels:
        app: capability
        version: v1
    spec:
      serviceAccountName: capability-service-account
      containers:
        - name: capability
          image: sinhasonalkumar/capability-service:20200412-233632.196816f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
##################################################################################################
# user-skills-ratings-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user-skills-ratings-service
  labels:
    app: user-skills-ratings
    service: user-skills-ratings
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: user-skills-ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-skills-ratings-v1
  labels:
    app: user-skills-ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-skills-ratings
      version: v1
  template:
    metadata:
      labels:
        app: user-skills-ratings
        version: v1
    spec:
      serviceAccountName: user-skills-ratings-service-account
      containers:
        - name: user-skills-ratings
          image: sinhasonalkumar/user-skills-ratings-service:20200412-233632.196816f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
##################################################################################################
# user-skills-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user-skills-service
  labels:
    app: user-skills
    service: user-skills
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: user-skills
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-skills-v1
  labels:
    app: user-skills
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-skills
      version: v1
  template:
    metadata:
      labels:
        app: user-skills
        version: v1
    spec:
      serviceAccountName: user-skills-service-account
      containers:
        - name: user-skills
          image: sinhasonalkumar/user-skills-service:20200412-233632.196816f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---

##################################################################################################
# user-profile-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user-profile-service
  labels:
    app: user-profile
    service: user-profile
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: user-profile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile-v1
  labels:
    app: user-profile
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profile
      version: v1
  template:
    metadata:
      labels:
        app: user-profile
        version: v1
    spec:
      serviceAccountName: user-profile-service-account
      containers:
        - name: user-profile
          image: sinhasonalkumar/user-profile-service:20200412-233632.196816f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---

##################################################################################################
# employee-details-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: employee-details-service
  labels:
    app: employee-details
    service: employee-details
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: employee-details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-details-v1
  labels:
    app: employee-details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-details
      version: v1
  template:
    metadata:
      labels:
        app: employee-details
        version: v1
    spec:
      serviceAccountName: employee-details-service-account
      containers:
        - name: employee-details
          image: sinhasonalkumar/employee-details-service:20200412-233632.196816f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
