java/istio-demo/deployment/step-1/EmployeeDetails-Istio-Ingress-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: employeeDetails-Istio-Ingress-Gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employeeDetailsVirtualService
spec:
  hosts:
  - "*"
  gateways:
  - employeeDetails-Istio-Ingress-Gateway
  http:
  - match:
    - uri:
        exact: /userDetails
    - uri:
        exact: /actuator
    - uri:
        prefix: /api
    route:
    - destination:
        host: employeeDetails-service
        port:
          number: 8080
